2002-12-28  Neil Jerram  <neil@ossau.uklinux.net>

	* boot-9.scm (module-defined-hook): New hook, run whenever a new
	module is defined.
	(process-define-module): Run this hook.

2002-12-18  Mikael Djurfeldt  <mdj@kvast.blakulla.net>

	* threads.scm: Removed bogus definition of future-ref.

2002-12-15  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* threads.scm (par-map, par-for-each): Reimplemented using
	joing-thread.
	(parallel): Reimplemented using futures.
	(n-par-map, n-for-each): New procedures.

2002-12-12  Marius Vollmer  <mvo@zagadka.ping.de>

	* optargs.scm (improper-list-copy): New.
	(parse-arglist): Use it instead of list-copy.

2002-12-09  Mikael Djurfeldt  <djurfeldt@nada.kth.se>

	* threads.scm (letpar): New macro.

2002-12-08  Rob Browning  <rlb@defaultvalue.org>

	* debugger/breakpoints/Makefile.am (subpkgdatadir): VERSION ->
	GUILE_EFFECTIVE_VERSION.

	* debugger/Makefile.am (subpkgdatadir): VERSION ->
	GUILE_EFFECTIVE_VERSION.

	* Makefile.am (subpkgdatadir): VERSION -> GUILE_EFFECTIVE_VERSION.

2002-12-04  Mikael Djurfeldt  <mdj@linnaeus>

	* threads.scm (parallel): New macro.
	 (par-map, par-for-each): New procedures.

	* documentation.scm (object-documentation): Added support for
	defmacros.

2002-11-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* boot-9.scm (re-export-syntax):  Re-introduced after accidentally
	removing it in my patch from 2002-11-16.

2002-11-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	Thanks to Mikael Djurfeldt for a bugreport which led to the
	following changes:

	* slib.scm (%system-define): Removed.

	(define): Changed to use define-private instead of
	%system-define.

	* boot-9.scm (define-private): Undid my changes from 2002-11-16
	until Guile supports hygienic macros.

2002-11-17  Neil Jerram  <neil@ossau.uklinux.net>

	* emacs.scm (emacs-load): Locally define `read-and-eval!', as it
	has been removed from the core.

2002-11-16  Dirk Herrmann  <D.Herrmann@tu-bs.de>
